--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
         <div class="card_img">
             <span class="card-img-circle"></span>
         </div>
-        <div class="card_name"></div>
-        <div class="card_domain"></div>
-        <div class="card_media"></div>
-        <div class="card_btn"></div>
-
+        <h2>Thanh Cong Vo</h2>
+        <p>Full Stack Developper</p>
+        <div class="card_social"></div>
+        <button>Contact Me</button>
     </div>
 
 </body>
