--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="card">
         <div class="card_img">
-            <span class="card-img-circle"></span>
+            <img src="fb.jpg" alt="">
         </div>
         <h2>Thanh Cong Vo</h2>
         <p>Full Stack Developper</p>
