add css for <h2>, <p>, card social and btn

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <img src="fb.jpg" alt="">
         </div>
         <h2>Thanh Cong Vo</h2>
-        <p>Full Stack Developper</p>
+        <p>Full Stack Developer</p>
         <div class="card_social">
             <a href=""><i class="fab fa-facebook-square"></i></a>
             <a href=""><i class="fab fa-linkedin"></i></a>
             <a href=""><i class="fas fa-envelope"></i></a>
             <a href=""><i class="fab fa-github-square"></i></a>
         </div>
-        <button>Contact Me</button>
+        <button>Contact me</button>
     </div>
 
 </body>
