Enlarge image on hover

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <a href=""><i class="fab fa-github-square"></i></a>
         </div>
         <button>Contact me</button>
+        <div class="card_image">
+            <img src="fb.jpg" alt="">
+        </div>
     </div>
 
 </body>
